<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F3645">

    <Button
        android:id="@+id/saveButton"
        style="@style/ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/toggle"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancelButton" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/toggle"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/comTV"
        style="@style/TextStyleHabit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="Sleep Time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/commentET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Add your bookmark"
        android:inputType="text"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/comTV"
        app:layout_constraintTop_toBottomOf="@+id/comTV" />

    <TextView
        android:id="@+id/dateTV"
        style="@style/TextStyleHabit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/commentET"
        app:layout_constraintTop_toBottomOf="@+id/timeTV" />

    <TextView
        android:id="@+id/timeTV"
        style="@style/TextStyleHabit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/commentET"
        app:layout_constraintTop_toBottomOf="@+id/commentET" />


    <!--    <TextView-->
    <!--        android:id="@+id/currentTime1"-->
    <!--        style="@style/TextStyleHabit"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/time"-->
    <!--        android:textSize="24sp"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/timeTV"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/changeTimeButton"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/timeTV"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/timeTV" />-->

    <Button
        android:id="@+id/currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColorLink="#AF91E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <CalendarView
        android:id="@+id/calendarViem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:dateTextAppearance="@style/CalenderViewDateCustomText"
        android:theme="@style/CalenderViewCustom"
        android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="@+id/commentET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/commentET"
        app:layout_constraintTop_toBottomOf="@+id/dateTV"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/changeTimeButton"
        style="@style/ToggleButton"
        android:layout_width="148dp"
        android:layout_height="47dp"
        android:backgroundTint="@color/toggle"
        android:text="@string/change_time"
        app:layout_constraintBottom_toBottomOf="@+id/timeTV"
        app:layout_constraintEnd_toEndOf="@+id/commentET"
        app:layout_constraintTop_toTopOf="@+id/timeTV" />


</androidx.constraintlayout.widget.ConstraintLayout>